--- a/css/style.css
+++ b/css/style.css
@@ -581,8 +581,8 @@ input[type="radio"].visually-hidden {
 
 .site-navigation a {
     display: block;
-    padding-top: 18px;
-    padding-bottom: 25px;
+    padding-top: 19px;
+    padding-bottom: 24px;
     padding-right: 31px;
     padding-left: 30px;
     vertical-align: middle;
@@ -1231,23 +1231,6 @@ input[type="radio"].visually-hidden {
     text-decoration: none;
 }
 
-.paginator {
-    margin-top: 32px;
-    margin-bottom: 60px;
-    
-}
-
-.description-item  h2 {
-    margin: 0;
-}
-
-.description-item {
-    padding-top: 67px;
-    padding-bottom: 73px;
-    
-}
-
-
 /*    ----    section "Популярные товары"     ----    */
 
 .popular-item {
@@ -1629,11 +1612,10 @@ input[type="radio"].visually-hidden {
     list-style: none;    
 }
 
-.services-navigation::after {    
-    position: absolute;
-    
+.services-navigation::after {
     content: "";
     
+    position: absolute;
     top: -40px;
     right: -1px;
     
@@ -1788,23 +1770,54 @@ input[type="radio"].visually-hidden {
 
 /*  ----  catalog  ----  */
 
+.paginator {
+    display: flex;
+    flex-wrap: wrap;
+    
+    margin-top: 32px;
+    margin-bottom: 60px;    
+}
+
 .paginator a {
+    display: block;
+    width: 38px;
+    margin-right: 10px;
+    padding: 9px 0 9px 0;
+    text-align: center;    
+    
     font-size: 13px;
     line-height: 18px;
     color: #000000;
     
     border: 1px solid #e5e5e5;
+    border-radius: 3px;
 }
 
 .paginator a:first-child {
+    color: #ffffff;
     background-color: #ee3643;
 }
 
+.paginator a:last-child {
+    width: 140px;
+    margin-right: 0;
+    padding-right: 30px;
+    padding-left: 30px;
+    
+    text-transform: uppercase;
+}
+
 .description-item {
+    padding-top: 64px;
+    padding-bottom: 69px;
+    
     background-color: #f4f7f9;
 }
 
 .description-item h2 {
+    margin: 0;
+    margin-bottom: 26px;
+    
     font-family: "Cuprum", Arial, sans-serif;
     font-size: 30px;
     line-height: 30px;
@@ -1813,9 +1826,11 @@ input[type="radio"].visually-hidden {
 }
 
 .description-item p {
+    margin: 0;
+    width: 938px;
+    
     font-size: 13px;
     line-height: 24px;
-    margin-bottom: 0;
 }
 
 /*    ----    footer     ----    */
@@ -1929,7 +1944,7 @@ input[type="radio"].visually-hidden {
 
 .footer-primary {
     padding-top: 35px;
-    padding-bottom: 35px;
+    padding-bottom: 30px;
     
     font-size: 16px;
     line-height: 18px;
@@ -2168,12 +2183,89 @@ input[type="radio"].visually-hidden {
 }
 
 .modal-map .modal-close {
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
 }
 
 .modal-map .modal-close::before,
 .modal-map .modal-close::after {
     top: 9px;
     right: -3px;
+}
+
+/*    ----    Catalog     ----    */
+
+.modal-buy {
+    position: relative;
+    width: 620px;
+    margin: 50px auto; 
+    
+    font-family: "Cuprum", Arial, sans-serif;    
+    
+    border-top: 7px solid #ff5257;
+    box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
+}
+
+.modal-buy p {
+    margin: 0;
+}
+
+.modal-buy-top {
+    padding: 66px 0 67px 180px;
+    
+    font-size: 30px;
+    line-height: 30px;
+}
+
+.modal-buy-top::before {
+    content: "";
+    
+    position: absolute;
+    top: 48px;
+    left: 81px;
+    
+    width: 66px;
+    height: 66px;
+    
+    background-image: url("../img/svg/icon-mark.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;        
+}
+
+.modal-buy .modal-close {
+    top: 9px;
+    right: 9px;
+}
+
+.modal-buy .modal-close::before,
+.modal-buy .modal-close::after {
+    top: 9px;
+    right: -3px;
+}
+
+.modal-buy-down {    
+    padding-top: 37px;
+    padding-bottom: 37px;    
+    text-align: center;
+    
+    font-size: 14px;
+    line-height: 18px;    
+    text-transform: uppercase;
+    
+    background-color: #f4f4f4;
+}
+
+.modal-buy-down a {
+    display: inline-block;
+    width: 220px;
+    border-radius: 3px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+.white-button {
+    margin-left: 20px;
+    background-color: #ffffff;
+    color: #000000;
 }
